# cufeed-py-server

./: .gitignore  README.md  manage.py  pyproject.toml
cufeed/: __init__.py  apps.py  models.py  tasks.py  views.py
cufeed/migrations/: 0001_initial.py
cufeed/service/: FeedService.py
cufeed_app/: asgi.py  celeryconf.py  settings.py  urls.py  wsgi.py
